force-app/main/default/objects/Opportunity/fields/Aggregate_Calculated_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Calculated_Total_Price__c</fullName>
    <label>Aggregate Calculated Total Price</label>
    <summarizedField>OpportunityLineItem.Total_Calculated_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>