force-app/main/default/objects/Opportunity/fields/Aggregate_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Price_Adjustment__c</fullName>
    <label>Aggregate Price Adjustment</label>
    <summarizedField>OpportunityLineItem.Calculated_Price_Adjustment__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>