force-app/main/default/objects/Opportunity/fields/Automatic_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Renewal</label>
    <type>Checkbox</type>
</CustomField>