force-app/main/default/objects/Opportunity/fields/Average_Desk_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Desk_Price__c</fullName>
    <formula>Monthly_Price__c /  Desk_Count_For_Deposit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Desk Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>