force-app/main/default/objects/Opportunity/fields/Calculated_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Deposit__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TEXT(Contract_Type__c))),
    IF(
        ISPICKVAL(Contract_Type__c, &quot;Monthly&quot;),
       ( Total_Monthly_Amount_For_Deposit__c * 1.5)*1.18,
        IF(
            Desk_Count_For_Deposit__c &lt;= 20,
          (  Total_Monthly_Amount_For_Deposit__c * 1.5)*1.18,
            IF(
                Desk_Count_For_Deposit__c &lt;= 75,
                IF(
                    FLOOR(
                        ((YEAR(End_Date__c) - YEAR(Start_Date__c)) * 12) + MONTH(End_Date__c) - MONTH(Start_Date__c)
                    ) &lt;= 12,
                   (Total_Monthly_Amount_For_Deposit__c * 2)*1.18,
                   (Total_Monthly_Amount_For_Deposit__c * 3)*1.18
                ),
             ( Total_Monthly_Amount_For_Deposit__c * 4)*1.18
            )
        )
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>