force-app/main/default/objects/Opportunity/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <label>Calculated End Date</label>
    <summarizedField>OpportunityLineItem.End_date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>