force-app/main/default/objects/Opportunity/fields/Calculated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Start_Date__c</fullName>
    <label>Calculated Start Date</label>
    <summarizedField>OpportunityLineItem.Entry_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>