force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Standard Opportunity&quot;, 
    IMAGE(&quot;/resource/1721026275000/Standard_Opp_Record_Type&quot;,&quot;standard&quot;,20,128),
    IF(
        RecordType.Name = &quot;On demand Opportunity&quot;,
        IMAGE(&quot;/resource/1721026456000/Occasional&quot;,&quot;On demand&quot;,20,128),
        IMAGE(&quot;/resource/1721026321000/Series&quot;,&quot;Series&quot;,20,128)
    )
)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>