force-app/main/default/objects/Opportunity/fields/Change_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Opportunity_Type__c</fullName>
    <label>Change Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Old Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>