force-app/main/default/objects/Opportunity/fields/Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>Co_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Type</field>
            <operation>equals</operation>
            <value>Rooms Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>