force-app/main/default/objects/Opportunity/fields/Count_Standard_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_Standard_Products__c</fullName>
    <label>Count Standard Products</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>Standard Products</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Access_Type__c</field>
        <operation>equals</operation>
        <value>Periodic</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>