force-app/main/default/objects/Opportunity/fields/DepositAmount__c.field-meta.xml
<CustomField>
    <fullName>DepositAmount__c</fullName>
    <inlineHelpText>The deposit is already calculated, but you can still bypass the amount by manually inputting the new amount to this field- pay attention that this might trigger an approval process</inlineHelpText>
    <label>Deposit Amount- Manual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>