force-app/main/default/objects/Opportunity/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>created for mappingfrom lead to opp (standard runs to contact)</description>
    <label>Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>