force-app/main/default/objects/Opportunity/fields/Designated_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Designated_Entry_Date__c</fullName>
    <label>Designated Entry Date</label>
    <type>Date</type>
</CustomField>