force-app/main/default/objects/Opportunity/fields/Desk_Count_For_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Desk_Count_For_Deposit__c</fullName>
    <inlineHelpText>Temporary products desk count are excluded</inlineHelpText>
    <label>Desk Count</label>
    <summarizedField>OpportunityLineItem.Desk_Count__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Temporary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>Standard Products</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>