force-app/main/default/objects/Opportunity/fields/FBCL_ID__c.field-meta.xml
<CustomField>
    <fullName>FBCL_ID__c</fullName>
    <externalId>true</externalId>
    <label>FBCL ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>