force-app/main/default/objects/Opportunity/fields/Link_to_the_Index__c.field-meta.xml
<CustomField>
    <fullName>Link_to_the_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link to the Index ?</label>
    <type>Checkbox</type>
</CustomField>