force-app/main/default/objects/Opportunity/fields/Location_Institution_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Institution_Code__c</fullName>
    <formula>Location__r.Institution_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Institution Code</label>
    <type>Text</type>
</CustomField>