force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Low budget</fullName>
            </value>
            <value>
                <fullName>Looking for an independent office</fullName>
            </value>
            <value>
                <fullName>Customer changed their mind</fullName>
            </value>
            <value>
                <fullName>Customer stopped responding</fullName>
            </value>
            <value>
                <fullName>Customer signed with competitor</fullName>
            </value>
            <value>
                <fullName>Looking for different location</fullName>
            </value>
            <value>
                <fullName>Decided to stay in current office</fullName>
            </value>
            <value>
                <fullName>Unwilling to provide more details</fullName>
            </value>
            <value>
                <fullName>Unavailable Product</fullName>
            </value>
            <value>
                <fullName>Future Potential Deal/Timing</fullName>
            </value>
            <value>
                <fullName>SYSTEM TEST</fullName>
                <label>System test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>