force-app/main/default/objects/Opportunity/fields/Max_Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Renewal_End_Date__c</fullName>
    <description>the date maximum of the renewal date</description>
    <formula>DATE(
    YEAR(End_Date__c) - FLOOR((MONTH(End_Date__c) - CASE(
        TEXT(Renewal_Start_Date__c),
        &quot;1&quot;, 1,
        &quot;2&quot;, 2,
        &quot;3&quot;, 3,
        &quot;4&quot;, 4,
        &quot;5&quot;, 5,
        &quot;6&quot;, 6,
        0
    ) - 1) / 12),
    MOD(12 + MONTH(End_Date__c) - CASE(
        TEXT(Renewal_Start_Date__c),
        &quot;1&quot;, 1,
        &quot;2&quot;, 2,
        &quot;3&quot;, 3,
        &quot;4&quot;, 4,
        &quot;5&quot;, 5,
        &quot;6&quot;, 6,
        0
    ), 12),
    DAY(End_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Renewal End Date</label>
    <type>Date</type>
</CustomField>