force-app/main/default/objects/Opportunity/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile phone mapped from the lead</description>
    <inlineHelpText>Mobile phone mapped from the lead</inlineHelpText>
    <label>Mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>