force-app/main/default/objects/Opportunity/fields/Non_Renewal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewal_Reason__c</fullName>
    <label>Non-Renewal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Business Changes</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>