force-app/main/default/objects/Opportunity/fields/Opportunity_Invitation_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Invitation_Id__c</fullName>
    <formula>&quot;PID:&quot; &amp;
&quot;OPP-&quot; &amp;
MID(Id, 12, 4) &amp; 
&quot;X&quot; &amp;
RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))), 2) &amp;
CASE(MONTH(DATEVALUE(CreatedDate)),
    1, &quot;A&quot;, 2, &quot;B&quot;, 3, &quot;C&quot;, 4, &quot;D&quot;, 5, &quot;E&quot;, 6, &quot;F&quot;,
    7, &quot;G&quot;, 8, &quot;H&quot;, 9, &quot;I&quot;, 10, &quot;J&quot;, 11, &quot;K&quot;, 12, &quot;L&quot;,
    &quot;Z&quot;) &amp;
LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Invitation Id</label>
    <type>Text</type>
</CustomField>