force-app/main/default/objects/Opportunity/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>IF(
    ISPICKVAL(Type, &quot;New Business&quot;),
    IMAGE(&quot;/resource/1721026533000/New_Business&quot;, &quot;New Business&quot;, 20, 128),
    IF(
        ISPICKVAL(Type, &quot;Changes from opportunity&quot;),
        IMAGE(&quot;/resource/1721026197000/Existing&quot;, &quot;Existing Business&quot;, 20, 128),
        IF(
            ISPICKVAL(Type, &quot;Returning Customer&quot;),
            IMAGE(&quot;/resource/1721026127000/Returning&quot;, &quot;Returning Customer&quot;, 20, 128),
            IF(
                ISPICKVAL(Type, &quot;Renewal&quot;),
                IMAGE(&quot;/resource/1721026245000/Renewal&quot;, &quot;Renewal&quot;, 20, 128),
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>