force-app/main/default/objects/Opportunity/fields/Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original contract used to create this opportunity- can be from change, renewal and more</description>
    <label>Original Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>