force-app/main/default/objects/Opportunity/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>To capture the payment date of non-periodic/monthly products in the contract</description>
    <inlineHelpText>To capture the payment date of non-periodic/monthly products in the contract</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>