force-app/main/default/objects/Opportunity/fields/Potential_Income__c.field-meta.xml
<CustomField>
    <fullName>Potential_Income__c</fullName>
    <formula>Location__r.Average_Potential_Per_Desk__c *  Number_of_members__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Location Average Potential Per Desk * Number of Memebers = Potential Income</inlineHelpText>
    <label>Potential Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>