force-app/main/default/objects/Opportunity/fields/Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment__c</fullName>
    <label>Price Adjustment (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>