force-app/main/default/objects/Opportunity/fields/Price_Adjustment_Check__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Check__c</fullName>
    <formula>AND( Automatic_Renewal__c ,  Count_Standard_Products__c &gt;0, Count_Standard_Products__c !=  Count_standard_products_with_adjustment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Adjustment Check</label>
    <type>Checkbox</type>
</CustomField>