force-app/main/default/objects/Opportunity/fields/Primary_Contact_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Role_ID__c</fullName>
    <label>Primary Contact Role ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>