force-app/main/default/objects/Opportunity/fields/Product_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Access_Type__c</fullName>
    <label>Product Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Hourly Multi-Pass</fullName>
            </value>
            <value>
                <fullName>Daily Multi-Pass</fullName>
            </value>
            <value>
                <fullName>Periodic</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>