force-app/main/default/objects/Opportunity/fields/Product_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Product_Purpose__c</fullName>
    <label>Product Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>