force-app/main/default/objects/Opportunity/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hot Desk</fullName>
            </value>
            <value>
                <fullName>Open Space</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Daily HD</fullName>
            </value>
            <value>
                <fullName>Daily Office</fullName>
            </value>
            <value>
                <fullName>Meeting Rooms</fullName>
            </value>
            <value>
                <fullName>Event Space-Balcony, roof, Lounge</fullName>
            </value>
            <value>
                <fullName>Mini Cinema</fullName>
            </value>
            <value>
                <fullName>Podcast Room</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Parking spot</fullName>
            </value>
            <value>
                <fullName>Capsules</fullName>
            </value>
            <value>
                <fullName>Food / Refreshements</fullName>
            </value>
            <value>
                <fullName>IP/VLAN</fullName>
            </value>
            <value>
                <fullName>Credits(Meeting rooms windows)</fullName>
            </value>
            <value>
                <fullName>Print Units</fullName>
            </value>
            <value>
                <fullName>Storage Space</fullName>
            </value>
            <value>
                <fullName>Set Up Fee</fullName>
            </value>
            <value>
                <fullName>Restoration Fee</fullName>
            </value>
            <value>
                <fullName>Arnona</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>Other- (all other fee)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>