force-app/main/default/objects/Opportunity/fields/Quantity_Sum__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sum__c</fullName>
    <label>Quantity Sum</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>On demand Products, Extra for all products, Extra for meter Products</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>