force-app/main/default/objects/Opportunity/fields/Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.SubSource__c</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <filterItems>
            <field>$Source.SubSource__c</field>
            <operation>equals</operation>
            <value>Friend Bring Friend</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>$Source.SubSource__c</field>
            <operation>equals</operation>
            <value>Referral( from ROOMS)</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Rooms Internal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>